# foo_cc

./: .gitignore  LICENSE  README.md  build.sh  c2bin_helper.sh  clean.sh  coverage_report.sh  foo_cc.c  fuzz.sh  meson.build  run_with_stack_trace.sh  stack_trace_demangler.py  test.sh
debug/: exception_stack_trace.cpp  exception_stack_trace.hpp
src/: build_script.sh  main.cpp  report.sh
src/backend/interpreter/: compile_time_evaluator.cpp  compile_time_evaluator.hpp
src/backend/x86_64/: compile_operators.cpp  compile_operators.hpp  generation.cpp  generation.hpp  traverse_ast.cpp  traverse_ast.hpp  traverse_ast_helpers.cpp  traverse_ast_helpers.hpp
src/frontend/ast/: ast.hpp  ast_printer.cpp  ast_printer.hpp
src/frontend/lexing/: lexer.cpp  lexer.hpp
src/frontend/parsing/: ast.cpp  ast.hpp  parser.cpp  parser.hpp  parser_utils.cpp  parser_utils.hpp
src/io/: file_io.cpp  file_io.hpp
src/middle_end/typing/: generate_typing.cpp  type_checker.cpp  type_checker.hpp
src/middle_end/validation/: validate_ast.cpp  validate_ast.hpp
src/utils/: common.hpp
src/utils/data_structures/: random_access_stack.hpp
test_programs/: main.c  main10.c  main11.c  main12.c  main13.c  main14.c  main15.c  main16.c  main17.c  main18.c  main19.c  main2.c  main20.c  main21.c  main22.c  main23.c  main24.c  main25.c  main26.c  main27.c  main28.c  main29.c  main3.c  main30.c  main31.c  main32.c  main33.c  main34  main34.c  main34.s  main35.c  main36.c  main37.c  main38.c  main39.c  main4.c  main40.c  main6.c  main7.c  main8.c  (+1 more)
tests/: test1.cpp
tests/compile_time/: variant_adapter.cpp
tests/runtime/: utils_common_test.cpp
